// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hamburger should render with active styles when passed the isActive prop 1`] = `
.circuit-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999999;
  color: #1A1A1A;
  padding: 8px calc(24px - 1px);
  border-radius: 8px;
  padding: 12px;
  border: 0;
}

.circuit-3:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-3:focus::-moz-focus-inner {
  border: 0;
}

.circuit-3:disabled,
.circuit-3[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-3:hover {
  background-color: #FAFBFC;
  border-color: #333333;
}

.circuit-3:active {
  background-color: #F5F5F5;
  border-color: #1A1A1A;
}

.circuit-1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 24px;
  height: 24px;
  -webkit-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
}

.circuit-2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0 {
  top: 50%;
  width: 14px;
  -webkit-transform: rotate(225deg);
  -ms-transform: rotate(225deg);
  transform: rotate(225deg);
}

.circuit-0,
.circuit-0::after,
.circuit-0::before {
  background-color: currentColor;
  border-radius: 1px;
  display: block;
  height: 2px;
  position: absolute;
  -webkit-transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in, -webkit-transform 0.3s cubic-bezier(0.55,0.055,0.675,0.19);
  -webkit-transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in, transform 0.3s cubic-bezier(0.55,0.055,0.675,0.19);
  transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in, transform 0.3s cubic-bezier(0.55,0.055,0.675,0.19);
}

.circuit-0::before,
.circuit-0::after {
  top: 0;
  content: '';
}

.circuit-0::before {
  -webkit-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
  width: 14px;
}

.circuit-0::after {
  -webkit-transform: translateY(5px);
  -ms-transform: translateY(5px);
  transform: translateY(5px);
  width: 14px;
}

.circuit-0,
.circuit-0::before,
.circuit-0::after {
  -webkit-transition: width 0.2s ease-out,opacity 0.1s ease-out 0.15s, -webkit-transform 0.3s cubic-bezier(0.215,0.61,0.355,1) 0.15s;
  -webkit-transition: width 0.2s ease-out,opacity 0.1s ease-out 0.15s, transform 0.3s cubic-bezier(0.215,0.61,0.355,1) 0.15s;
  transition: width 0.2s ease-out,opacity 0.1s ease-out 0.15s, transform 0.3s cubic-bezier(0.215,0.61,0.355,1) 0.15s;
  width: 14px;
}

.circuit-0::before {
  opacity: 0;
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
}

.circuit-0::after {
  -webkit-transform: translateY(0) rotate(-90deg);
  -ms-transform: translateY(0) rotate(-90deg);
  transform: translateY(0) rotate(-90deg);
}

<button
  class="circuit-3"
  title="Close menu"
  type="button"
>
  <span
    class="circuit-1"
    role="presentation"
  >
    <span
      class="circuit-0"
    />
  </span>
  <span
    class="circuit-2"
  >
    Close menu
  </span>
</button>
`;

exports[`Hamburger should render with default styles 1`] = `
.circuit-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999999;
  color: #1A1A1A;
  padding: 8px calc(24px - 1px);
  border-radius: 8px;
  padding: 12px;
  border: 0;
}

.circuit-3:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-3:focus::-moz-focus-inner {
  border: 0;
}

.circuit-3:disabled,
.circuit-3[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-3:hover {
  background-color: #FAFBFC;
  border-color: #333333;
}

.circuit-3:active {
  background-color: #F5F5F5;
  border-color: #1A1A1A;
}

.circuit-1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 24px;
  height: 24px;
  -webkit-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
}

.circuit-0 {
  top: 50%;
  width: 14px;
}

.circuit-0,
.circuit-0::after,
.circuit-0::before {
  background-color: currentColor;
  border-radius: 1px;
  display: block;
  height: 2px;
  position: absolute;
  -webkit-transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in, -webkit-transform 0.3s cubic-bezier(0.55,0.055,0.675,0.19);
  -webkit-transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in, transform 0.3s cubic-bezier(0.55,0.055,0.675,0.19);
  transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in, transform 0.3s cubic-bezier(0.55,0.055,0.675,0.19);
}

.circuit-0::before,
.circuit-0::after {
  top: 0;
  content: '';
}

.circuit-0::before {
  -webkit-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
  width: 14px;
}

.circuit-0::after {
  -webkit-transform: translateY(5px);
  -ms-transform: translateY(5px);
  transform: translateY(5px);
  width: 14px;
}

.circuit-2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<button
  class="circuit-3"
  title="Open menu"
  type="button"
>
  <span
    class="circuit-1"
    role="presentation"
  >
    <span
      class="circuit-0"
    />
  </span>
  <span
    class="circuit-2"
  >
    Open menu
  </span>
</button>
`;
